<resources>
    <string name="app_name">TenantCloud Goods</string>

    <string name="action_add">Add</string>
    <string name="action_checkout">Pay</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_change">Change</string>

    <string name="title_tenant_cloud_sign_up">Sign Up into TenantCloud</string>
    <string name="title_tenant_cloud_sign_in">Sign In into TenantCloud</string>
    <string name="hint_choose_role">Choose role:</string>

    <string name="error_user_is_already_registered">User is already registered</string>
    <string name="error_google_api_exception_with_code">Google api exception was thrown, status code: %d</string>

    <string name="user_role_customer">Customer</string>
    <string name="user_role_admin">Admin</string>
    <string name="text_or">Or</string>
    <string name="question_are_you_shore">Are you sure?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="title_scan">Scan</string>
    <string name="error_fail_to_generate_check_data">Fail to serialize check data</string>
    <string name="action_confirm">Confirm</string>
    <string name="error_order_already_exist">Order is already exist in basket</string>
    <string name="error_goods_not_found">Goods with id %d not found.</string>
    <string name="error_invalid_scan_data">Invalid data!</string>
    <string name="title_payment_history">Payment history</string>
    <string name="hint_eneter_shop_name">Enter shop name:</string>
    <string name="text_ok">Ok</string>

</resources>
