<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/windowBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_tenant_cloud_sign_in" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_choose_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:buttonSize="wide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Nazar Pinenzhyk"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/tv_change_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/action_change"
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tv_account_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_account_name"
            app:layout_constraintTop_toTopOf="@+id/tv_account_name"
            tools:visibility="gone" />

        <FrameLayout
            android:id="@+id/fl_role_container"
            android:layout_width="87dp"
            android:layout_height="94dp"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_account_name"
            tools:background="@drawable/ic_account_circle_black_24dp"
            tools:visibility="gone">

        </FrameLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_delete_user"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="?attr/selectableItemBackground"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/iv_navigate_next"
            app:layout_constraintEnd_toStartOf="@+id/iv_navigate_next"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_navigate_next"
            app:srcCompat="@drawable/ic_delete_black_24dp"
            tools:visibility="gone" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_navigate_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="32dp"
            android:background="?attr/selectableItemBackground"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_delete_user"
            app:layout_constraintTop_toBottomOf="@+id/fl_role_container"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
            tools:visibility="gone" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Don't have TenantCloud account?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_go_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/action_sign_up"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_question"
        app:layout_constraintTop_toTopOf="@+id/tv_question" />

</android.support.constraint.ConstraintLayout>